# destill3d

./: .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-02-04-full-spec-implementation.md
src/destill3d/: __init__.py  __main__.py  api.py  server.py
src/destill3d/acquire/: __init__.py  base.py  credentials.py  downloader.py  models.py  queue.py  rate_limiter.py
src/destill3d/classify/: __init__.py  inference.py  registry.py  zero_shot.py
src/destill3d/cli/: __init__.py  main.py
src/destill3d/cli/commands/: __init__.py  acquire.py  classify.py  config.py  db.py  extract.py  models.py  server.py
src/destill3d/core/: __init__.py  async_utils.py  config.py  database.py  exceptions.py  executor.py  pipeline.py  recovery.py  retry.py  security.py  snapshot.py  vector_index.py
src/destill3d/extract/: __init__.py  features.py  loader.py  preprocessing.py  renderer.py  sampling.py  tessellation.py
src/destill3d/proto/: __init__.py  snapshot.proto
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  bench_classification.py  bench_extraction.py
tests/e2e/: __init__.py  test_cli.py  test_cli_workflow.py
tests/integration/: __init__.py  test_classification.py  test_cults3d_adapter.py  test_database_operations.py  test_github_adapter.py  test_grabcad_adapter.py  test_huggingface_adapter.py  test_pipeline.py  test_platform_adapters.py  test_thangs_adapter.py
tests/unit/: __init__.py  test_credentials.py  test_database.py  test_features.py  test_loader.py  test_pipeline.py  test_preprocessing.py  test_rate_limiter.py  test_renderer.py  test_sampling.py  test_security.py  test_snapshot.py  test_vector_index.py
